# duckstation-switch

./: CMakeLists.txt  README.md  README_Switch.md  switch-liblua51-5.1.5-1-any.pkg.tar.zst
.github/workflows/: ns-release.yml  rolling-release.yml
CMakeModules/: DuckStationDependencies.cmake  DuckStationUtils.cmake  FindEGL.cmake  Toolchain-cross-Switch.cmake
dep/: CMakeLists.txt
dep/glad/: CMakeLists.txt
dep/glad/src/: glad.c
dep/imgui/: CMakeLists.txt
dep/stb/: CMakeLists.txt
dep/vixl/src/: code-buffer-vixl.cc
src/: CMakeLists.txt
src/common/: CMakeLists.txt  byte_stream.cpp  file_system.cpp  file_system.h  heap_array.h  http_downloader_curl.cpp  jit_code_buffer.cpp  jit_code_buffer.h  memmap.cpp  memmap.h  memory_arena.cpp  memory_arena.h  page_fault_handler.cpp  threading.cpp  timer.cpp  window_info.h
src/common/deko3d/: context.cpp  context.h  memory_heap.cpp  memory_heap.h  shader_cache.cpp  shader_cache.h  staging_texture.cpp  staging_texture.h  stream_buffer.cpp  stream_buffer.h  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h  util.cpp  util.h
src/core/: CMakeLists.txt  cpu_code_cache.cpp  cpu_code_cache_private.h  cpu_newrec_compiler.cpp  cpu_newrec_compiler.h  cpu_newrec_compiler_aarch64.cpp  cpu_newrec_compiler_aarch64.h  cpu_recompiler_code_generator.h  cpu_recompiler_code_generator_aarch32.cpp  cpu_recompiler_code_generator_aarch64.cpp  cpu_recompiler_code_generator_generic.cpp  cpu_recompiler_code_generator_x64.cpp  fullscreen_ui.cpp  game_database.cpp  game_list.cpp  gpu.h  gpu_commands.cpp  gpu_hw.cpp  gpu_hw_deko3d.cpp  gpu_hw_deko3d.h  gpu_hw_shadergen.cpp  gpu_sw.cpp  host.cpp  host.h  host_display.cpp  host_display.h  memory_card_image.h  settings.cpp  settings.h  shadergen.cpp  system.cpp  types.h
src/duckstation-nogui/: CMakeLists.txt  imgui_impl_switch.cpp  imgui_impl_switch.h  main.cpp  nogui_host.cpp  nogui_host.h  nogui_host_interface.cpp  nogui_platform.h  switch_asm.s  switch_host_interface.cpp  switch_host_interface.h  switch_nogui_platform.cpp  switch_nogui_platform.h
src/frontend-common/: CMakeLists.txt  common_host.cpp  common_host.h  common_host_interface.cpp  controller_interface.cpp  controller_interface.h  deko3d_host_display.cpp  deko3d_host_display.h  fullscreen_ui.cpp  game_database.cpp  game_list.cpp  imgui_fullscreen.cpp  imgui_impl_deko3d.cpp  imgui_overlays.cpp  input_manager.cpp  input_manager.h  input_source.h  postprocessing_shadergen.cpp  switch_audio_stream.cpp  switch_audio_stream.h  switch_controller_interface.cpp  switch_input_source.cpp  switch_input_source.h
src/scmversion/: CMakeLists.txt
src/util/: CMakeLists.txt  audio_stream.h  deko3d_device.cpp  deko3d_device.h  deko3d_host_display.cpp  deko3d_host_display.h  deko3d_memory_heap.cpp  deko3d_memory_heap.h  deko3d_pipeline.cpp  deko3d_pipeline.h  deko3d_stream_buffer.cpp  deko3d_stream_buffer.h  deko3d_swap_chain.cpp  deko3d_swap_chain.h  deko3d_texture.cpp  deko3d_texture.h  gpu_device.cpp  gpu_device.h  http_downloader_curl.cpp  imgui_impl_deko3d.cpp  imgui_impl_deko3d.h  imgui_manager.cpp  imgui_manager.h  input_manager.cpp  input_manager.h  input_source.h  jit_code_buffer.cpp  jit_code_buffer.h  memory_arena.cpp  memory_arena.h  opengl_context_egl.cpp  page_fault_handler.cpp  platform_misc_switch.cpp  postprocessing_shader_fx.cpp  shadergen.cpp  shadergen.h  switch_audio_stream.cpp  switch_audio_stream.h  switch_controller_interface.h  switch_exception_frame.h  (+5 more)
(+14 files in other folders)
